<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.kellymckinnon.setlister.SetlistActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="200"
        android:title="@string/send_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
</menu>
