<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    android:paddingRight="12dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/default_date"
        android:textColor="@color/my_accent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/band"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/date"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/venue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/band"
        android:text="@string/venue"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/num_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/venue"
        android:layout_alignParentEnd="true"
        android:text="@string/default_num_songs"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/venue"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/num_songs"
        android:singleLine="true"
        android:text="@string/tour"
        android:textColor="@color/secondary_text_default_material_light" />

</RelativeLayout>